[gd_scene load_steps=8 format=3 uid="uid://dvjh5aukq142t"]

[ext_resource type="Theme" uid="uid://d4evuq3gml4t4" path="res://UI/StorySequence/story_sequence_theme.tres" id="1_cn2c1"]
[ext_resource type="Texture2D" uid="uid://3emmtw4oi317" path="res://UI/StorySequence/storycard_test.png" id="2_btdn3"]
[ext_resource type="Script" path="res://UI/StorySequence/StorySequence.gd" id="2_gei5n"]
[ext_resource type="Texture2D" uid="uid://b4r8uim5jvh1v" path="res://UI/StorySequence/stars.png" id="3_js15a"]
[ext_resource type="PackedScene" uid="uid://bqe1ul3picejh" path="res://Shaders/CRTEffect.tscn" id="4_72xdg"]
[ext_resource type="AudioStream" uid="uid://bx7nuhupbwhva" path="res://Audio/Announce-vaan.ogg" id="5_2bpg5"]
[ext_resource type="AudioStream" uid="uid://cjbb2u35u6b05" path="res://Audio/DarkSpacev2-rodrigo_intro.mp3" id="6_i3y54"]

[node name="StorySequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("1_cn2c1")
script = ExtResource("2_gei5n")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="bg stars" type="Sprite2D" parent="."]
position = Vector2(616, 321)
texture = ExtResource("3_js15a")

[node name="StorySlide" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StoryText" type="RichTextLabel" parent="StorySlide"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.155
anchor_top = 0.636
anchor_right = 0.858
anchor_bottom = 1.0
offset_left = 8.44
offset_top = -160.128
offset_right = -7.41598
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center]Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pulvinar fames torquent cras efficitur maximus; sociosqu dui. Libero leo purus mauris habitant duis purus finibus eu. Interdum est scelerisque erat fermentum consequat velit fusce?[/center]"
visible_characters_behavior = 1

[node name="StoryImage" type="TextureRect" parent="StorySlide"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.071
anchor_right = 0.725
anchor_bottom = 0.602
offset_left = -933.8
offset_top = -556.008
offset_right = -934.2
offset_bottom = -556.096
grow_horizontal = 2
texture = ExtResource("2_btdn3")
expand_mode = 1
stretch_mode = 5

[node name="StoryAnnouncer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_2bpg5")
autoplay = true

[node name="StoryMusic2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_i3y54")
volume_db = -12.683
autoplay = true

[node name="SkipButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.875
anchor_top = 0.878
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.00012
offset_top = -543.944
offset_right = -25.9999
offset_bottom = -577.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.937251, 0.96078)
text = "skip"

[node name="NextButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.875
anchor_top = 0.878
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.10352e-05
offset_top = 0.0559692
offset_right = -33.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
text = "next"

[node name="CRTEffect" parent="." instance=ExtResource("4_72xdg")]
